[package]
name = "helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["lansheng228 <lansheng228@163.com>"]
repository = "https://github.com/simbahebinbo/example-helloworld.git"
license = "Apache-2.0"
homepage = ""
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.0"
solana-program = "=1.14.6"

[dev-dependencies]
solana-program-test = "=1.14.6"
solana-sdk = "=1.14.6"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
